core-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: iparapheur
  labels:
    app: core
spec:
  selector:
    app: core
  ports:
    - port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: core
  name: core
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: core
    spec:
      hostAliases:
        - ip: "10.152.183.159"
          hostnames:
            - "ip-k8s.local"
      containers:
        - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-core:develop
          name: core
          resources:
            limits:
              memory: "268435456"
          tty: true
          volumeMounts:
            - mountPath: /sentry.properties
              name: core-sentry-properties
            - mountPath: /application.yml
              name: core-properties

      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: core-sentry-properties
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/src/main/resources/core/sentry.properties
            type: FileOrCreate
        - name: core-properties
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/src/main/resources/core/application-dev.yml
            type: FileOrCreate
status: { }
