crypto-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto
  namespace: iparapheur
  labels:
    app: crypto
spec:
  selector:
    app: crypto
  ports:
    - port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: crypto
  name: crypto
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crypto
    spec:
      containers:
        - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-crypto:2.1.0
          name: crypto
          resources:
            limits:
              memory: "268435456"
          tty: true
          volumeMounts:
            - mountPath: /sentry.properties
              name: crypto-sentry-properties
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: crypto-sentry-properties
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/src/main/resources/crypto/sentry.properties
            type: FileOrCreate
status: { }
