libersign-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: libersign
  namespace: iparapheur
  labels:
    app: libersign
spec:
  type: ClusterIP
  selector:
    app: libersign
  ports:
    - protocol: TCP
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: libersign
  name: libersign
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libersign
  strategy: {}
  template:
    metadata:
      labels:
        app: libersign
    spec:
      containers:
      - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/signature/libersign:1.10.1
        name: libersign
        resources:
          limits:
            memory: "67108864"
        tty: true
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
