matomo-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: matomo
  namespace: default
  labels:
    app: matomo
spec:
  type: ClusterIP
  selector:
    app: matomo
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  namespace: default
  labels:
    app: matomo
    environment: matomo


spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
      environment: matomo
  template:
    metadata:
      labels:
        app: matomo
        environment: matomo
    spec:
      containers:
        - name: matomo-nginx
          image: "nginx:alpine"
          command: [ "nginx", "-g", "daemon off;", "-c", "/config/nginx.conf" ]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Gi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /config/nginx.conf
              name: config
              subPath: nginx.conf
            - mountPath: /var/www/html
              name: html-files

        - name: matomo
          image: matomo:4.4.0-fpm-alpine
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - mountPath: /usr/local/etc/php/conf.d/php-special.ini
              name: config
              subPath: php.ini
            - mountPath: /var/www/html
              name: html-files

        - name: mysql
          volumeMounts:
            - name: matomo-mysql-storage
              mountPath: /var/lib/mysql
          image: mariadb:10.6.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
      volumes:
        - name: config
          configMap:
            name: matomo-config
        - name: html-files
        - name: matomo-mysql-storage
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/data/matomo-db
            type: DirectoryOrCreate
