pastell-connector-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: pastell-connector
  namespace: iparapheur
  labels:
    app: pastell-connector
spec:
  type: ClusterIP
  selector:
    app: pastell-connector
  ports:
    - protocol: TCP
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pastell-connector
  name: pastell-connector
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pastell-connector
  strategy: {}
  template:
    metadata:
      labels:
        app: pastell-connector
    spec:
      containers:
      - env:
        - name: POSTGRES_HOST
          value: postgres
        - name: REDIS_HOST
          value: redis
        - name: REDIS_PORT
          value: "6379"
        image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/pastell-connector:develop
        name: pastell-connector
        resources: {}
        tty: true
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
