pdf-stamp-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: pdf-stamp
  namespace: iparapheur
  labels:
    app: pdf-stamp
spec:
  type: ClusterIP
  selector:
    app: pdf-stamp
  ports:
    - protocol: TCP
      port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pdf-stamp
  name: pdf-stamp
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-stamp
  strategy: {}
  template:
    metadata:
      labels:
        app: pdf-stamp
    spec:
      containers:
      - image: registry.libriciel.fr/signature/pdf-stamp:develop
        name: pdf-stamp
        resources:
          limits:
            memory: "268435456"
        tty: true
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
