pes-viewer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pes-viewer
  namespace: iparapheur
  labels:
    app: pes-viewer
spec:
  selector:
    app: pes-viewer
  ports:
    - port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pes-viewer
  name: pes-viewer
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pes-viewer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pes-viewer
    spec:
      containers:
      - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/pes-viewer:1.3.0
        name: pes-viewer
        resources:
          limits:
            memory: "268435456"
        tty: true
        volumeMounts:
        - mountPath: /pesPJ/
          name: pes-viewer-claim0
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: pes-viewer-claim0
        persistentVolumeClaim:
          claimName: pes-viewer-claim0
status: {}
