postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: iparapheur
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432

---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - args:
            - postgres
            - -c
            - max_connections=500
            - -c
            - log_min_messages=LOG
          image: postgres:10.1
          name: postgres
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "536870912"
          tty: true
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-entrypoint
      restartPolicy: Always
      volumes:
        - name: postgres-data
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/data/postgres
            type: DirectoryOrCreate
        - name: postgres-entrypoint
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/src/main/resources/postgres/docker-entrypoint-initdb.d
            type: DirectoryOrCreate
status: { }
