redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: iparapheur
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: iparapheur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:6.0.9-alpine
        name: redis
        resources:
          limits:
            memory: "134217728"
        ports:
          - containerPort: 6379
        tty: true
        volumeMounts:
        - mountPath: /data
          name: redis-claim0
      restartPolicy: Always
      volumes:
      - name: redis-claim0
        persistentVolumeClaim:
          claimName: redis-claim0
status: {}
