workflow-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: workflow
  namespace: default
  labels:
    app: workflow
spec:
  type: ClusterIP
  selector:
    app: workflow
  ports:
    - protocol: TCP
      port: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workflow
  name: workflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: workflow
    spec:
      containers:
        - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/workflow:develop
          name: workflow
          resources:
            limits:
              memory: "268435456"
          tty: true
          volumeMounts:
            - mountPath: /sentry.properties
              name: workflow-properties
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: workflow-properties
          hostPath:
            path: /home/marc/dev/i-Parapheur-v5/compose/src/main/resources/workflow/sentry.properties
            type: FileOrCreate
status: { }
